--- a/themes/label-7.yaml
+++ b/themes/label-7.yaml
@@ -62,16 +62,17 @@ layers:
 
     buildings:
         buildings-labels:
-            all:
-                - { $zoom: { min: 17 } }
-                - $geometry: point
-                - function() { return global.text_visible_building; }
-                - landuse_kind: [university, college, school, kindergarten]
-            any:
-                - { $zoom: [17], area: { min: 3000 }, name: true }
-                - { $zoom: [17], area: { min: 2000 }, kind_detail: [university, college, school, kindergarten] }
-                - { $zoom: [18], area: { min: 1000 }, name: true }
-                - { $zoom: [18], kind_detail: [university, college, school, kindergarten] }
-                - { $zoom: [19], area: { min: 200 }, name: true }
-                - { $zoom: { min: 19 }, kind_detail: [university, college, school, kindergarten] }
-                - { $zoom: { min: 20 }, name: true }
+            filter:
+                all:
+                    - { $zoom: { min: 17 } }
+                    - $geometry: point
+                    - function() { return global.text_visible_building; }
+                    - landuse_kind: [university, college, school, kindergarten]
+                any:
+                    - { $zoom: [17], area: { min: 3000 }, name: true }
+                    - { $zoom: [17], area: { min: 2000 }, kind_detail: [university, college, school, kindergarten] }
+                    - { $zoom: [18], area: { min: 1000 }, name: true }
+                    - { $zoom: [18], kind_detail: [university, college, school, kindergarten] }
+                    - { $zoom: [19], area: { min: 200 }, name: true }
+                    - { $zoom: { min: 19 }, kind_detail: [university, college, school, kindergarten] }
+                    - { $zoom: { min: 20 }, name: true }
